--- a/src/style.css
+++ b/src/style.css
@@ -285,14 +285,14 @@ button:focus {
   top: 7.2vh;
   position: absolute;
   z-index: -2;
-  height: 100%;
+  height: 90%;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 .slider-mask {
   background-color: rgba(0, 0, 0, 0.8);
   width: 100%;
-  height: 100%;
+  height: 90%;
   position: absolute;
   top: 7.2vh;
   z-index: -1;
@@ -303,15 +303,20 @@ button:focus {
   /* z-index: 1; */
   background-position: top center;
   background-repeat: no-repeat;
-  padding-bottom: 30px !important;
+  padding-bottom: 10px !important;
   padding-top: 30px !important;
   padding-left: 0px !important;
   padding-right: 0px !important;
 }
 
 .home-button {
-  width: 20% !important
+  margin-bottom: 0% !important;
+  width: 20% !important;
+  margin-left: 41% !important;
+  margin-top: 20vh !important;
 }
+
+
 
 .home-content {
   padding: 9rem 0 2rem !important;
@@ -337,13 +342,11 @@ button:focus {
 }
 
 .Typewriter__wrapper {
-  font-size: 2.2em !important;
   color: var(--callout-color) !important;
   font-weight: 600 !important;
 }
 
 .Typewriter__cursor {
-  font-size: 2.4em !important;
   color: #ffffff !important;
 }
 
